# gpui-ce

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  flake.nix  typos.toml
crates/sum_tree/src/: sum_tree.rs
examples/: prelude.rs
examples/bench/: shadow.rs
examples/learn/: animation.rs  async_tasks.rs  creating_components.rs  custom_drawing.rs  interactive_elements.rs  layout.rs  styling.rs  text.rs
examples/legacy/: window.rs
examples/legacy/svg/: svg.rs
src/: app.rs  element.rs  executor.rs  gpui.rs  local_util.rs  platform.rs  platform_scheduler.rs  prelude.rs  profiler.rs  style.rs  window.rs
src/app/: async_context.rs  entity_map.rs
src/elements/: div.rs  img.rs  svg.rs  text.rs
src/platform/: mac.rs  web.rs  windows.rs
src/platform/linux/: platform.rs
src/platform/linux/headless/: client.rs
src/platform/linux/wayland/: client.rs  clipboard.rs  cursor.rs  window.rs
src/platform/linux/x11/: client.rs  window.rs
src/platform/mac/: display.rs  events.rs  keyboard.rs  metal_renderer.rs  pasteboard.rs  platform.rs  screen_capture.rs  text_system.rs  window.rs
src/platform/web/: platform.rs  window.rs
src/platform/wgpu/: wgpu_context.rs
src/platform/windows/: platform.rs
src/scheduler/: clock.rs  executor.rs  mod.rs
tooling/macros/: Cargo.toml
