[package]
name = "gpui-ce-macros"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Macros used by gpui"

[features]
inspector = []

[lib]
path = "src/gpui_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

